# anonymize-app

./: .docker-compose.yaml.swp  .dockerignore  .env.local  .env.prod  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
src/: main.py  settings.py
